# PostNetCoreNativo

./: .gitignore  LICENSE  PostNetCoreNativo.sln
PostNetCoreNativo/: Program.cs
src/C++ Library/: CMakeLists.txt  Nativo.cpp  Nativo.h
src/PostNetCoreNativo/: PostNetCoreNativo.csproj  Program.cs
